--- a/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
@@ -39,6 +39,7 @@
 /*Comment box*/
 #bootstrap-override .comment-box {
     margin: 0px 15px 15px 15px;
+    padding: 7.5px;
 }
 
     #bootstrap-override .comment-box button {
