--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -61,6 +61,10 @@
                             <div class="card-body text-center">
                                 <img class="update-img" src=@post.ImgURL />
                                 <p>@post.Description</p>
+                                <div class="text-left">
+                                    <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                                    <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                                </div>
                             </div>
 
                             @if (post.Comments != null)
@@ -108,6 +112,7 @@
             }
         </div>
     </main>
+    <script src="~/js/Posts.js" type="text/javascript"></script>
     <script>
         // post comment ajax call
         $(document).ready(function () {
