--- a/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
@@ -1,10 +1,16 @@
-﻿#bootstrap-override #add-post {
+﻿@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+#bootstrap-override #add-post {
     margin: 15px;
 }
 
 #bootstrap-override .card {
     text-align: left;
     margin-bottom: 15px;
+}
+
+#bootstrap-override .votes {
+    font-family: 'Press Start 2P', cursive;
 }
 
 /*Delete button */
