--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -70,14 +70,20 @@
                                 <!-- Voting System -->
                                 <div id=@voteSystem class="voting-system text-left">
                                     <form>
+                                        <!-- UpVote -->
                                         <input hidden asp-for="@post.Id" value=@post.Id />
                                         <button id=@upVoteId value=@post.Id class="upVoteHandler glyphicon glyphicon-thumbs-up"></button>
-                                        <span class="votes">@post.UpVotes</span>
+                                        <span>@post.UpVotes</span>
 
+                                        <!-- DownVote -->
                                         <input hidden asp-for="@post.Id" value=@post.Id />
                                         <button id=@downVoteId value=@post.Id class="downVoteHandler glyphicon glyphicon-thumbs-down"></button>
+                                        <span>@post.DownVotes</span>
 
-                                        <span class="votes">@post.DownVotes</span>
+                                        @if (!User.Identity.IsAuthenticated)
+                                        {
+                                            <span class="login-to-vote">Sign in to like/dislike</span>
+                                        }
                                     </form>
                                 </div>
                             </div>
