Finish dark theme.

--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
 @model Dev_Blog.Models.Base.BasePage
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark indigo">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <img src="~/Imgs/Logo.png" height="115" width="100" />
         <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
