--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -36,19 +36,21 @@
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ou1pl0XNRs"></iframe>
                         </div>
                     </div>
+
+                    <!--Suggestion Box-->
                     <div class="card-footer text-center">
                         <h4>Have a suggestion? Leave a comment!</h4>
                         <form method="post">
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <textarea asp-for=@Model.Context placeholder="Put suggestion here.." class="pb-cmnt-textarea d-block" maxlength="1000"></textarea>
+                                <textarea asp-for=@Model.Context placeholder="Leave suggestion here.." class="pb-cmnt-textarea d-block" maxlength="1000"></textarea>
                                 <button class="btn btn-primary" asp-page-handler="Suggestion" type="submit">
                                     Submit
                                 </button>
                             }
                             else
                             {
-                                <textarea placeholder="Login in to leave a suggestion.." class="pb-cmnt-textarea d-block"></textarea>
+                                <textarea placeholder="Login in to leave a suggestion.." class="d-block"></textarea>
                             }
                         </form>
                     </div>
