--- a/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
@@ -29,7 +29,7 @@
                     <div class="card-body">
                         <img class="update-img" src=@Model.Post.ImgURL />
                         <p>@Model.Post.Description</p>
-                        <textarea asp-for="@Model.Description" placeholder="New description here" class="pb-cmnt-textarea"></textarea>
+                        <textarea asp-for="@Model.Description" placeholder="New description here"></textarea>
 
                         <input hidden asp-for=@Model.Post.Id>
                         <input hidden type="datetime" asp-for=@Model.Post.Date>
