--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -92,6 +92,7 @@
                                 {
                                     <!--Delete Comment Button-->
                                     <div class="posted-comments comment-box">
+                                        <span class="glyphicon glyphicon-user user-icon"></span>
                                         <span class="comment-username">@comment.UserName</span>
                                         <div class="float-right">
                                             <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
