--- a/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
@@ -73,7 +73,7 @@ a[edit] {
 
 #bootstrap-override .comment-username,
 #bootstrap-override .user-icon {
-    color: rgb(125, 125, 125);
+    color: #8B8B8B;
 }
 
 #bootstrap-override .update-img {
