--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -63,7 +63,7 @@
                             <!-- Post Information -->
                             <div class="card-body text-center">
                                 <img class="update-img" src=@post.ImgURL />
-                                <p>@post.Description</p>
+                                <p description>@post.Description</p>
 
                                 <!-- Voting System -->
                                 <div id=@voteSystem class="voting-system text-left">
