--- a/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
@@ -5,7 +5,6 @@
 }
 
 #bootstrap-override .card {
-    text-align: left;
     margin-bottom: 15px;
 }
 
@@ -76,20 +75,30 @@ a[edit] {
     color: #8B8B8B;
 }
 
-#bootstrap-override .update-img {
-    height: 432px;
-    width: 768px;
-}
-
 #bootstrap-override .posted-comments {
     border: 1.5px solid #C6C6C6;
     border-radius: 3.5px;
     margin-bottom: 5px;
 }
 
+/*Post*/
+#bootstrap-override .update-img {
+    height: 432px;
+    width: 768px;
+}
+
+#bootstrap-override p[description] {
+    width: 768px;
+    margin: auto;
+}
+
 @media screen and (max-width: 975px) {
     #bootstrap-override .update-img {
         height: 360px;
+        width: 640px;
+    }
+
+    #bootstrap-override p[description] {
         width: 640px;
     }
 }
@@ -99,11 +108,19 @@ a[edit] {
         height: 252px;
         width: 448px;
     }
+
+    #bootstrap-override p[description] {
+        width: 448px;
+    }
 }
 
 @media screen and (max-width: 525px) {
     #bootstrap-override .update-img {
         height: 234px;
+        width: 416px;
+    }
+
+    #bootstrap-override p[description] {
         width: 416px;
     }
 }
