--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="~/css/Posts.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/All.css" />
     <title>Status</title>
 </head>
 <body id="bootstrap-override">
@@ -63,7 +64,7 @@
                             <!-- Post Information -->
                             <div class="card-body text-center">
                                 <img class="update-img" src=@post.ImgURL />
-                                <p description>@post.Description</p>
+                                <p id="post-description">@post.Description</p>
 
                                 <!-- Voting System -->
                                 <div id=@voteSystem class="voting-system text-left">
