--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -28,7 +28,7 @@
                     </div>
                     <div class="card-body text-center">
                         <img id="update-img" class="update-img" src=@Model.Post.ImgURL />
-                        <p id="post-description">@Model.Post.Description</p>
+                        <p class="post-description">@Model.Post.Description</p>
 
                         <hr />
 
