--- a/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
@@ -33,7 +33,7 @@
                                 </div>
                                 <input class="form-control" asp-for="@Model.Name" placeholder="img title" />
                                 <input class="form-control" asp-for="@Model.Post.UpdateNum" placeholder="update #" />
-                                <button class="btn btn-primary pull-right" type="submit">Post</button>
+                                <button class="btn btn-secondary pull-right" type="submit">Update</button>
                             </form>
                         </div>
                     </div>
