--- a/Dev-Blog/Dev-Blog/wwwroot/css/Add.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Add.css
@@ -1,4 +1,6 @@
-﻿.pb-cmnt-container {
+﻿@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+.pb-cmnt-container {
     font-family: Lato;
     margin-top: 100px;
 }
