--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -91,12 +91,13 @@
                             {
                                 foreach (var comment in post.Comments)
                                 {
-                                    <!--Delete Comment Button-->
                                     <div comment class="posted-comments comment-box">
                                         <span class="glyphicon glyphicon-user user-icon"></span>
                                         <span class="comment-username">@comment.UserName</span>
                                         <div class="float-right">
                                             <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
+
+                                            <!--Delete Comment Button-->
                                             <form method="post" class="delete-form">
                                                 @if (User.Identity.Name == Model.AdminUser)
                                                 {
@@ -233,6 +234,7 @@
             var renderComment = function (comment, date, idx) {
                 $(`#form${idx}`).before(
                     $(`<div comment class="posted-comments comment-box">` +
+                        `<span class="glyphicon glyphicon-user user-icon"></span>` +
                         `<span class="comment-username">${comment.UserName}</span>` +
                         `<div class="float-right">` +
                         `<span>${date}</span>` +
